# Tutorials_advanced_c

./: Readme.md
lesson1-BitAccess/: ReadMe.md  main.c
lesson2-Big_vs_Little_Endian/: ReadMe.md  main.c
lesson3-Add_static_qtCreator/: readme.md
lesson3-Add_static_qtCreator/cmakecompile/: CMakeLists.txt  main.c
lesson4-inter_pc_communication_using_C/: readme.md
lesson4-inter_pc_communication_using_C/receiver/: main.cpp  nmpack_interface.h  notes.txt  receiver.pro  receiver.pro.user.a50266d.4.9-pre1
lesson4-inter_pc_communication_using_C/sender/: main.cpp  sender.pro  sender.pro.user.a50266d.4.9-pre1
